<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@mipmap/image6">


    <EditText
        android:id="@+id/updateTitle"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/field_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />


    <EditText
        android:id="@+id/updateCountry"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:hint="@string/field_country"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/updateCity"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:hint="@string/field_city"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/updateContinent"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/field_continent"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <Button
            android:id="@+id/boutonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_marginTop="20dp"

            android:text="@string/save_trip"

            android:background="@layout/my_button"
            android:textColor="@color/buttonLabel"


            />
    </RelativeLayout>

</LinearLayout>
